--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-pandas
-numpy
-scikit-learn
-matplotlib
 seaborn
-xgboost
-streamlit
-joblib
+streamlit==1.37.0
+scikit-learn==1.8.0
+xgboost==3.2.0
+pandas==3.0.0
+numpy==2.4.2
+matplotlib==3.10.8
+joblib==1.5.3
